<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/layout_top_spinner_layout_marginBottom"
        android:layout_marginTop="@dimen/layout_top_spinner_layout_marginTop"
        android:backgroundTint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_top_ll_marginLeft"
        android:layout_marginRight="@dimen/layout_top_ll_marginRight"
        android:layout_marginTop="@dimen/layout_top_ll_marginTop"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/player_x_to_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_top_ll_player_to_move_margin"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true"
            android:elevation="@dimen/viewElevation"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/layout_top_ll_player_to_move_paddingBottom">

            <TextView
                android:id="@+id/player_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/layout_top_tv_player_marginLeft"
                android:layout_marginStart="@dimen/layout_top_tv_player_marginStart"
                android:layout_weight="1"
                android:text="@string/string_x"
                android:textColor="@android:color/black"
                android:textSize="@dimen/layout_top_tv_textSize" />

            <TextView
                android:id="@+id/player_x_scoreboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_top_tv_player_scoreboard_marginEnd"
                android:layout_marginRight="@dimen/layout_top_tv_player_scoreboard_marginRight"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/string_dash"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/veryDarkGray"
                android:textSize="@dimen/layout_top_tv_textSize" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/player_o_to_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_top_ll_player_to_move_margin"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true"
            android:elevation="@dimen/viewElevation"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/layout_top_ll_player_to_move_paddingBottom">

            <TextView
                android:id="@+id/player_o"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/layout_top_tv_player_marginLeft"
                android:layout_marginStart="@dimen/layout_top_tv_player_marginStart"
                android:layout_weight="1"
                android:text="@string/string_o"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                android:textSize="@dimen/layout_top_tv_textSize" />

            <TextView
                android:id="@+id/player_o_scoreboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_top_tv_player_scoreboard_marginEnd"
                android:layout_marginRight="@dimen/layout_top_tv_player_scoreboard_marginRight"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/string_dash"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/veryDarkGray"
                android:textSize="@dimen/layout_top_tv_textSize" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/player_to_move_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notice_board"
        android:textSize="@dimen/layout_top_tv_player_to_move_textSize" />

</LinearLayout>
