<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/player_x_to_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/player_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/string_x"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/player_x_scoreboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="-"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/veryDarkGray"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/player_o_to_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:clickable="true"
            android:elevation="4dp"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/player_o"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/string_o"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/player_o_scoreboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="-"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textColor="@color/veryDarkGray"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/player_to_move_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/notice_board"
        android:layout_marginBottom="16dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/row0_col0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            style="@style/Button3x3"
            android:layout_marginRight="4dp"
            tools:text="X" />

        <Button
            android:id="@+id/row0_col1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            style="@style/Button3x3"
            android:layout_toRightOf="@id/row0_col0"
            tools:text="O" />

        <Button
            android:id="@+id/row0_col2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            style="@style/Button3x3"
            android:layout_toRightOf="@id/row0_col1"
            tools:text="X" />

        <Button
            android:id="@+id/row1_col0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/row0_col0"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="4dp"
            style="@style/Button3x3"
            tools:text="O" />

        <Button
            android:id="@+id/row1_col1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/row0_col1"
            android:layout_marginBottom="4dp"
            android:layout_toRightOf="@id/row1_col0"
            style="@style/Button3x3"
            tools:text="X" />

        <Button
            android:id="@+id/row1_col2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/row0_col2"
            android:layout_marginLeft="4dp"
            android:layout_toRightOf="@id/row1_col1"
            style="@style/Button3x3"
            tools:text="O" />

        <Button
            android:id="@+id/row2_col0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/row1_col0"
            android:layout_marginRight="4dp"
            style="@style/Button3x3"
            tools:text="X" />

        <Button
            android:id="@+id/row2_col1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/row1_col0"
            android:layout_toEndOf="@+id/row2_col0"
            android:layout_toRightOf="@+id/row2_col0"
            style="@style/Button3x3"
            tools:text="O" />

        <Button
            android:id="@+id/row2_col2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/row1_col2"
            android:layout_alignStart="@+id/row1_col2"
            android:layout_below="@+id/row1_col1"
            style="@style/Button3x3"
            tools:text="X" />

    </RelativeLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:clickable="true"
        android:onClick="resetButton"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/restart_game"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

</LinearLayout>
